Finished fixing. Replaced Object[] with String[]